--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A cli app to create an expressjs boiler plate.",
   "main": "index.js",
   "type": "module",
+  "repository": {
+    "url": "https://github.com/hayder86al/generate-expressjs"
+  },
   "bin": {
     "create-express-app": "bin/main.js"
   },
