--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-expressjs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A cli app to create an expressjs boiler plate.",
   "main": "index.js",
   "type": "module",
@@ -18,5 +18,8 @@
   "directories": {
     "lib": "lib"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "chalk": "^5.4.1"
+  }
 }
