--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-expressjs",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A cli app to create an expressjs boiler plate.",
   "main": "index.js",
   "type": "module",
@@ -18,7 +18,17 @@
   "directories": {
     "lib": "lib"
   },
-  "keywords": [],
+  "keywords": [
+    "expressjs",
+    "cli",
+    "boilerplate",
+    "nodejs",
+    "typescript",
+    "express",
+    "generator",
+    "scaffold",
+    "create-express-app"
+  ],
   "dependencies": {
     "chalk": "^5.4.1"
   }
